build: downgrade project to Java 8