@@ -29,16 +29,10 @@ public class WebhookAlarmChannelFactory implements AlarmChannelFactory {
 
     @Override
     public List<FormFieldConfig> params() {
-        return List.of(
-                buildField("url", "Webhook 地址", FieldType.INPUT, "https://oapi.dingtalk.com/robot/send?access_token=xxx", null),
-                buildField("method", "HTTP 方法", FieldType.INPUT, null, "POST"),
-                buildField("timeoutMs", "超时(ms)", FieldType.NUMBER, null, "10000"),
-                buildField("headers", "请求头(JSON)", FieldType.TEXTAREA,
-                        "{\"Authorization\":\"Bearer xxx\"}", null),
-                buildField("bodyTemplate", "请求体模板", FieldType.TEXTAREA,
+        return java.util.Collections.unmodifiableList(java.util.Arrays.asList(buildField("url", "Webhook 地址", FieldType.INPUT, "https://oapi.dingtalk.com/robot/send?access_token=xxx", null), buildField("method", "HTTP 方法", FieldType.INPUT, null, "POST"), buildField("timeoutMs", "超时(ms)", FieldType.NUMBER, null, "10000"), buildField("headers", "请求头(JSON)", FieldType.TEXTAREA,
+                        "{\"Authorization\":\"Bearer xxx\"}", null), buildField("bodyTemplate", "请求体模板", FieldType.TEXTAREA,
                         "{\"msgtype\":\"text\",\"text\":{\"content\":\"${title}\\n${content}\"}}",
-                        null)
-        );
+                        null)));
     }
 
     private FormFieldConfig buildField(String key, String label, FieldType type,
