@@ -3,7 +3,7 @@ import java.util.Map;
 public final class UnsupportedEngineCapabilityException extends EngineContractException {
     private final EngineCapabilities.Capability capability;
     public UnsupportedEngineCapabilityException(EngineCapabilities.Capability capability) {
-        super("Engine capability is not supported: " + capability, null, Map.of("capability", capability.name()));
+        super("Engine capability is not supported: " + capability, null, java.util.Collections.singletonMap("capability", capability.name()));
         this.capability = capability;
     }
     public EngineCapabilities.Capability capability() { return capability; }
